temp/unpackaged/objects/Selector__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobile__c</fullName>
        <label>mobile</label>
        <type>Phone</type>
    </fields>
    <label>Selector</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Selector Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>